# Parallels

./: .gitignore  .gitmodules  CMakeLists.txt  Launch Parallels.command  PD-Patcher_v18.1.1r1.dmg  PDPatcher_18.1.1-53328.pkg  README.md  install.sh  readme.md  reset.command  switch-patched.sh  switch-stock.sh
assets/: PDFM.VolumeIcon.icns  PTFM.VolumeIcon.icns
crack/pdfm-18.0.1.53056/: prl_client_app.md  prl_disp_service.md
entitlements/ParallelsDesktop/: ParallelsDesktop.entitlements  ParallelsMacVM.entitlements  ParallelsVM.entitlements  gen.sh  pd.provisionprofile
scripts/: build.sh  insert_dylib  install.sh  publish.sh  rebuild.sh
src/: main.cpp  xorstr.hpp
